Working-ish list

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
+    dataBinding.enabled true
+
     defaultConfig {
         applicationId "lt.blackbrackets.kasvalgyt"
         minSdkVersion 16
@@ -22,6 +26,9 @@ android {
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
     }
+    packagingOptions {
+        exclude 'META-INF/rxjava.properties'
+    }
 }
 
 dependencies {
@@ -32,17 +39,32 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-
+    kapt 'com.android.databinding:compiler:2.2.3'
 
     compile 'io.nlopez.smartlocation:library:3.2.11'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
     compile 'com.mcxiaoke.koi:core:0.5.3'
     compile 'com.android.support:support-v4:25.1.0'
+    compile 'com.github.nitrico.lastadapter:lastadapter:2.0.0'
+    compile 'com.chibatching:kotpref:1.6.0'
+    compile 'com.github.nitrico.fontbinder:fontbinder:1.0.4'
+    compile 'com.readystatesoftware.systembartint:systembartint:1.0.3'
+
+    //RX Retrofit
+    compile'com.google.code.gson:gson:2.4'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
+
 }
 repositories {
     mavenCentral()
+}
+
+
+kapt {
+    generateStubs = true
 }
