--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,8 +45,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.android.support:multidex:1.0.1'
-
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.mcxiaoke.koi:core:0.5.3'
     compile 'com.chibatching:kotpref:1.6.0'
@@ -67,6 +66,9 @@ dependencies {
     compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
 
     compile 'com.google.android.gms:play-services-location:10.2.6'
+
+    compile 'com.github.stfalcon:frescoimageviewer:0.5.0'
+    compile 'com.facebook.fresco:fresco:1.3.0'
 }
 
 repositories {
