--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
 
     compile 'com.github.stfalcon:frescoimageviewer:0.5.0'
     compile 'com.facebook.fresco:fresco:1.3.0'
+    compile 'com.karumi:dexter:4.1.0'
+
 }
 
 repositories {
